# fastapi_saml

./: .env_sample  .gitignore  LICENSE  README.md  config.py  dependencies.py  main.py  pyproject.toml  restart.sh  run.sh  stop.sh
db/: apps_and_users.json
routers/: protected.py  public.py  saml.py
sample_nginx_config/: work_computer.conf
static/: styles.css
templates/: acs.html  index.html  logout.html  protected.html  qtim_apps.html  sls.html
utils/: saml_helpers.py
